# MalariaDataModelingWorkshop

./: PROMPT.md  README.html  README.md  app.py  example.aider.conf.yml  index.html  main.py  malaria_modeling.qmd  pyproject.toml  theme.scss  utils.py
context/: PRD.md  TASKS.md
data/: dj_et_ke_so_ss_sd_ug_NationalUnit-data.csv
docs/: USAGE.md
tests/: test_app.py
